fix horizontal scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -53,5 +53,5 @@
   animation: fadein 0.5s;
 }
 html {
-  overflow-y: overlay;
+  overflow-y: scroll;
 }
